Correct layout issues caused by previous commit

--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -65,6 +65,18 @@ ul {
   min-width: 100%;
 }
 
+
+.story-box-container {
+  display: webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  width: 100%;
+  height: 35rem;
+  position: relative;  
+}
+
 .story-item {
   height: auto;
   display: flex;
